Fix text remains visible during webfont load
Added that the default fonts loads and gets swapped
whenever the webfont is available.

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -132,12 +132,14 @@
   font-family: Aller;
   src: url(/assets/font/aller.woff2);
   font-weight: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: Aller;
   src: url(/assets/font/aller-bold.woff2);
   font-weight: bold;
+  font-display: swap;
 }
 
 @font-face {
@@ -145,6 +147,7 @@
   src: url(/assets/font/aller-bold-italic.woff2);
   font-style: italic;
   font-weight: bold;
+  font-display: swap;
 }
 
 @font-face {
@@ -152,4 +155,5 @@
   src: url(/assets/font/aller-italic.woff2);
   font-style: italic;
   font-weight: normal;
+  font-display: swap;
 }
